--- a/css/gyik.css
+++ b/css/gyik.css
@@ -89,23 +89,34 @@ h2 {
 .brand-slogan {
   color: #52606d;
 }
-/*menu */
+
 .custom-navbar {
   background-color: #2c3e50;
   padding: 10px 20px;
 }
 
-/* fő menü */
+
 .nav-links {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
-/* lenyíló */
+
 .dropdown {
   position: relative;
 }
+
+
+.dropdown::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 10px;
+}
+
 
 .dropdown > a {
   color: white;
@@ -114,11 +125,11 @@ h2 {
   padding: 8px 12px;
 }
 
-/* lenyíló lista */
+
 .dropdown-list {
   list-style: none;
   position: absolute;
-  top: 35px;
+  top: 30px; /* volt 35px → kisebb rés */
   left: 0;
   background-color: white;
   border-radius: 6px;
@@ -130,7 +141,7 @@ h2 {
   display: none;
 }
 
-/* elemek */
+
 .dropdown-list li a {
   display: block;
   padding: 10px 20px;
@@ -142,7 +153,7 @@ h2 {
   background-color: #f1f1f1;
 }
 
-/* megjelenítés hoverre */
+
 .dropdown:hover .dropdown-list {
   display: block;
 }
