--- a/css/szakmaialapfogalmak.css
+++ b/css/szakmaialapfogalmak.css
@@ -52,23 +52,30 @@ h2 {
   border-left: 4px solid #2563eb;
 }
 
-/*menu */
+/* menu */
 .custom-navbar {
   background-color: #2c3e50;
   padding: 10px 20px;
 }
-
-/* fő menü */
 .nav-links {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-
-/* lenyíló */
 .dropdown {
   position: relative;
 }
+
+
+.dropdown::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 10px;
+}
+
 
 .dropdown > a {
   color: white;
@@ -77,11 +84,11 @@ h2 {
   padding: 8px 12px;
 }
 
-/* lenyíló lista */
+
 .dropdown-list {
   list-style: none;
   position: absolute;
-  top: 35px;
+  top: 30px; /* volt 35px → kisebb rés */
   left: 0;
   background-color: white;
   border-radius: 6px;
@@ -93,7 +100,7 @@ h2 {
   display: none;
 }
 
-/* elemek */
+
 .dropdown-list li a {
   display: block;
   padding: 10px 20px;
