--- a/css/szakmaiwebdesign.css
+++ b/css/szakmaiwebdesign.css
@@ -136,7 +136,7 @@ li::before {
 .content-section {
   padding-top: 0.2rem;
 }
-/*menu */
+/* menu */
 .custom-navbar {
   background-color: #2c3e50;
   padding: 10px 20px;
@@ -149,10 +149,19 @@ li::before {
   padding: 0;
 }
 
-/* lenyíló */
 .dropdown {
   position: relative;
 }
+
+.dropdown::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 10px;
+}
+
 
 .dropdown > a {
   color: white;
@@ -161,11 +170,11 @@ li::before {
   padding: 8px 12px;
 }
 
-/* lenyíló lista */
+
 .dropdown-list {
   list-style: none;
   position: absolute;
-  top: 35px;
+  top: 30px; /* volt 35px → kisebb rés */
   left: 0;
   background-color: white;
   border-radius: 6px;
@@ -177,7 +186,7 @@ li::before {
   display: none;
 }
 
-/* elemek */
+
 .dropdown-list li a {
   display: block;
   padding: 10px 20px;
