--- a/css/szolgaltatasok.css
+++ b/css/szolgaltatasok.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   font-family: "Segoe UI", Arial, sans-serif;
   font-size: 18px;
-  background-color: #eef2f7;
+  background-color: lightskyblue;
   color: #1f2933;
 }
 
